// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots StatusIndicator All 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <p
      class="StatusIndicator-t1vtrp-0 RKBBg"
      font-size="smaller"
      type="neutral"
    >
      Neutral
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 eqLsmz"
      font-size="smaller"
      type="dark"
    >
      Dark
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 bRgec"
      font-size="smaller"
      type="quiet"
    >
      Quiet
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 kcwFtD"
      font-size="smaller"
      type="informative"
    >
      Informative
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 bgEnVn"
      font-size="smaller"
      type="success"
    >
      Success
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 kskdzU"
      font-size="smaller"
      type="warning"
    >
      Warning
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 cpshFT"
      font-size="smaller"
      type="danger"
    >
      Danger
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Danger 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <p
      class="StatusIndicator-t1vtrp-0 cXXUWf"
      font-size="smaller"
      type="danger"
    >
      Danger
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Dark 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <p
      class="StatusIndicator-t1vtrp-0 jCXXav"
      font-size="smaller"
      type="dark"
    >
      Dark
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Following text 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 gODzGn"
    >
      <span
        class="Text-sc-1wu7vpu-0-h2 FItti"
        font-size="heading2"
        font-weight="normal"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 buWDcg"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-xda4ls-0 gODzGn"
    >
      <span
        class="Text-sc-1wu7vpu-0-h3 jhhgVc"
        font-size="heading3"
        font-weight="medium"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 buWDcg"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-xda4ls-0 gODzGn"
    >
      <span
        class="Text-sc-1wu7vpu-0 ipzFTA"
        color="currentColor"
        font-size="medium"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 buWDcg"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-xda4ls-0 gODzGn"
    >
      <span
        class="Text-sc-1wu7vpu-0 gtpyno"
        color="currentColor"
        font-size="small"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 buWDcg"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-xda4ls-0 gODzGn"
    >
      <span
        class="Text-sc-1wu7vpu-0 emQXPB"
        color="currentColor"
        font-size="smaller"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 buWDcg"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-xda4ls-0 gODzGn"
    >
      <span
        class="Text-sc-1wu7vpu-0 ipzFTA"
        color="currentColor"
        font-size="medium"
      >
        Long label Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in eleifend metus, in tempus sapien. Morbi eget felis est. Nunc facilisis vel nisi nec ornare. Ut blandit ullamcorper enim sed fringilla. Quisque malesuada pharetra tincidunt. Mauris mauris tortor, maximus vitae tempor ac, tincidunt pharetra augue. In eget suscipit est. Suspendisse feugiat risus urna
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 buWDcg"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Informative 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <p
      class="StatusIndicator-t1vtrp-0 fhSGRP"
      font-size="smaller"
      type="informative"
    >
      Informative
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Inside flex 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 fjbNzW"
    >
      <span
        class="Text-sc-1wu7vpu-0-h2 kXNyKB"
        font-size="heading2"
        font-weight="normal"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 buWDcg"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 fjbNzW"
    >
      <span
        class="Text-sc-1wu7vpu-0-h3 dshopI"
        font-size="heading3"
        font-weight="medium"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 buWDcg"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 fjbNzW"
    >
      <span
        class="Text-sc-1wu7vpu-0 kmQoAM"
        color="currentColor"
        font-size="medium"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 buWDcg"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 fjbNzW"
    >
      <span
        class="Text-sc-1wu7vpu-0 icwHeY"
        color="currentColor"
        font-size="small"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 buWDcg"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 fjbNzW"
    >
      <span
        class="Text-sc-1wu7vpu-0 gQrkYx"
        color="currentColor"
        font-size="smaller"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 buWDcg"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Neutral 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <p
      class="StatusIndicator-t1vtrp-0 buWDcg"
      font-size="smaller"
      type="neutral"
    >
      Neutral
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Quiet 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <p
      class="StatusIndicator-t1vtrp-0 kMMSHk"
      font-size="smaller"
      type="quiet"
    >
      Quiet
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Success 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <p
      class="StatusIndicator-t1vtrp-0 gyZmjr"
      font-size="smaller"
      type="success"
    >
      Success
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Warning 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <p
      class="StatusIndicator-t1vtrp-0 jRRKcw"
      font-size="smaller"
      type="warning"
    >
      Warning
    </p>
  </div>
</div>
`;
